--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -736,7 +736,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "The support vector machines basically finds the right equation to split the data set into linearly separable categories. Usually the data is separated in a way where we may be able to find the max gap, margin, between the categories. Sometimes the data points that are far into the opposite category or within the margin would be misclassified. There is of SVM method that help linearly separate help non-linear data: kernels."
+    "The support vector machines basically finds the right equation to split the data set into separate sets which if you look at it on a 2D plot you may be able to draw a line between the sets(i.e. like swiping a credit card in a card machine). Usually the data is separated in a way where we may be able to find the max space, called a margin, between the sets(i.e. trying to walk perfectly in the middle of the sidewalk by checking the distance to the lawn on one side and the road on the other). Sometimes the data points that are far into the opposite set or within the margin would be mislabeled. There is a SVM method that helps separate data that cannot be split into sets that can have a straight line run through, but instead a curved line(i.e. yin yang symbol) called kernels."
    ]
   },
   {
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -771,10 +771,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0040 seconds.\n",
-      "Tuned model has a training F1 score of 0.9115.\n",
-      "Made predictions in 0.0015 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7857.\n"
+      "Made predictions in 0.0042 seconds.\n",
+      "Tuned model has a training F1 score of 0.8674.\n",
+      "Made predictions in 0.0014 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7891.\n"
      ]
     }
    ],
@@ -784,7 +784,7 @@
     "from sklearn.metrics import make_scorer\n",
     "\n",
     "# Create the parameters list you wish to tune\n",
-    "parameters = {'C': [2], 'kernel': ['rbf']}\n",
+    "parameters = {'C': [1, 2, 10], 'kernel': ['linear', 'rbf', 'sigmoid'], 'random_state': [0, 10, 25]}\n",
     "\n",
     "# Initialize the classifier\n",
     "clf = SVC()\n",
@@ -832,9 +832,9 @@
     "| 100               |     0.0032 seconds      |     0.0010 seconds     |      0.8772      |     0.7632      |\n",
     "| 200               |     0.0038 seconds      |     0.0015 seconds     |      0.8474      |     0.7917      |\n",
     "| 300               |     0.0082 seconds      |     0.0017 seconds     |      0.8686      |     0.8462      |\n",
-    "| **Final**         |     **N/A seconds**     |     **0.0014 seconds** |      **0.9115**  |     **0.7857**  |\n",
+    "| **Final**         |     **N/A seconds**     |     **0.0015 seconds** |      **0.8674**  |     **0.7891**  |\n",
     "\n",
-    "The tuned set trained better than all of the training sizes, but only tested better than the training size of 100. "
+    "The tuned set trained better than the training sizes of 100 and 200, but only tested better than the training size of 100. "
    ]
   },
   {
