--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -117,20 +117,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of students: 394\n",
-      "Number of features: 31\n",
+      "Total number of students: 395\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
-      "Number of students who failed: 129\n",
-      "Graduation rate of the class: 67.26%\n"
+      "Number of students who failed: 130\n",
+      "Graduation rate of the class: 67.09%\n"
      ]
     }
    ],
    "source": [
     "# Calculate number of students\n",
-    "n_students = len(student_data.axes[0]) - 1\n",
+    "n_students = len(student_data.axes[0])\n",
+    "\n",
     "\n",
     "# Calculate number of features\n",
-    "n_features = len(student_data.axes[1])\n",
+    "n_features = len(student_data.columns[:-1])\n",
     "\n",
     "# Calculate passing students\n",
     "passed = 0\n",
@@ -529,31 +530,31 @@
      "output_type": "stream",
      "text": [
       "Training a SGDClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0019 seconds\n",
+      "Trained model in 0.0015 seconds\n",
       "Made predictions in 0.0005 seconds.\n",
       "F1 score for training set: 0.8243.\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Made predictions in 0.0004 seconds.\n",
       "F1 score for test set: 0.6610.\n",
       "\n",
       "\n",
       "Training a SGDClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0009 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 0.8204.\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Made predictions in 0.0002 seconds.\n",
       "F1 score for test set: 0.7682.\n",
       "\n",
       "\n",
       "Training a SGDClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0011 seconds\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for training set: 0.8122.\n",
-      "Made predictions in 0.0004 seconds.\n",
+      "Made predictions in 0.0005 seconds.\n",
       "F1 score for test set: 0.7785.\n",
       "\n",
       "\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0020 seconds\n",
+      "Trained model in 0.0012 seconds\n",
       "Made predictions in 0.0007 seconds.\n",
       "F1 score for training set: 0.8772.\n",
       "Made predictions in 0.0007 seconds.\n",
@@ -561,7 +562,7 @@
       "\n",
       "\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0030 seconds\n",
+      "Trained model in 0.0029 seconds\n",
       "Made predictions in 0.0021 seconds.\n",
       "F1 score for training set: 0.8474.\n",
       "Made predictions in 0.0011 seconds.\n",
@@ -570,33 +571,33 @@
       "\n",
       "Training a SVC using a training set size of 300. . .\n",
       "Trained model in 0.0058 seconds\n",
-      "Made predictions in 0.0041 seconds.\n",
+      "Made predictions in 0.0042 seconds.\n",
       "F1 score for training set: 0.8686.\n",
-      "Made predictions in 0.0015 seconds.\n",
+      "Made predictions in 0.0014 seconds.\n",
       "F1 score for test set: 0.8462.\n",
       "\n",
       "\n",
       "Training a AdaBoostClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0964 seconds\n",
-      "Made predictions in 0.0039 seconds.\n",
+      "Trained model in 0.1001 seconds\n",
+      "Made predictions in 0.0040 seconds.\n",
       "F1 score for training set: 0.9867.\n",
       "Made predictions in 0.0036 seconds.\n",
       "F1 score for test set: 0.6721.\n",
       "\n",
       "\n",
       "Training a AdaBoostClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.1227 seconds\n",
-      "Made predictions in 0.0051 seconds.\n",
+      "Trained model in 0.1030 seconds\n",
+      "Made predictions in 0.0046 seconds.\n",
       "F1 score for training set: 0.8920.\n",
-      "Made predictions in 0.0042 seconds.\n",
+      "Made predictions in 0.0038 seconds.\n",
       "F1 score for test set: 0.8033.\n",
       "\n",
       "\n",
       "Training a AdaBoostClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.1115 seconds\n",
+      "Trained model in 0.1048 seconds\n",
       "Made predictions in 0.0051 seconds.\n",
       "F1 score for training set: 0.8585.\n",
-      "Made predictions in 0.0038 seconds.\n",
+      "Made predictions in 0.0039 seconds.\n",
       "F1 score for test set: 0.8305.\n",
       "\n",
       "\n"
@@ -760,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -768,12 +769,22 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0042 seconds.\n",
+      "Made predictions in 0.0040 seconds.\n",
       "Tuned model has a training F1 score of 0.8674.\n",
-      "Made predictions in 0.0014 seconds.\n",
+      "Made predictions in 0.0015 seconds.\n",
       "Tuned model has a testing F1 score of 0.7891.\n"
      ]
     }
